fixed editor toolbar content not showing

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -42,10 +42,19 @@
             width: 100%;
             overflow: hidden;
             .Toolbar {
-                position: relative;
-                filter: brightness(350%);
-                overflow: visible;
+                border-radius: 0.5em 0.5em 0 0;
+                background-color: rgba(255, 255, 255, 0.1);
+                border: none;
+                fill: none;
+                stroke: white;
                 * {
+                    fill: none;
+                    stroke: white;
+                    * {
+                        * {
+                            color: white;
+                        }
+                    }
                     border: none;
                     border-radius: 0.5em;
                 }
